--- a/marks/templates/marks/dashboard/teacher.html
+++ b/marks/templates/marks/dashboard/teacher.html
@@ -1,7 +1,7 @@
 {% extends "marks/dashboard/base.html" %}
 {% block content %}
 <section>
-    <h2>Твои предметы</h1>
+    <h2>Ваши предметы</h1>
     <ul>
         {% for appointment in related_appointments %}
             <li>
