💩: marks table (wip)

--- a/marks/templates/marks/addmark.html
+++ b/marks/templates/marks/addmark.html
@@ -1,1 +1,28 @@
 {% extends "marks/base_site.html" %}
+{% load average_mark marks_table %}
+
+{% block content %}
+<section>
+    <h2>Оценки студентов группы {{students_unit}}</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>ФИО</th>
+                <th>Ср. балл</th>
+                <th>Оценки</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for student in students_unit.user_set.all %}
+                <tr>
+                    <td>{{student}}</td>
+                    <td>{% average_mark subject student %}</td>
+                    <td>
+                        {% marks_table student subject %}
+                    </td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</section>
+{% endblock content %}
