--- a/marks/templates/marks/dashboard/student.html
+++ b/marks/templates/marks/dashboard/student.html
@@ -8,7 +8,9 @@
         {% for appointment in related_appointments %}
             <li>
                 <div>
-                    <h3>{{appointment.subject}}</h3>
+                    <h3>
+                        <a href="{% url "marks:show" appointment.students_unit_id appointment.subject_id %}">{{appointment.subject}}</a>
+                    </h3>
                     {% if appointment.subject.description %}
                         <p>{{appointment.subject.description}}</p>
                     {% endif %}
