💄: some minor styles

--- a/marks/templates/marks/dashboard/student.html
+++ b/marks/templates/marks/dashboard/student.html
@@ -20,7 +20,7 @@
                     </div>
                     <div>
                         <span>средний балл: </span>
-                        <span>{% average_mark appointment.subject %}</span>
+                        <span class="mark">{% average_mark appointment.subject %}</span>
                     </div>
                 </div>
             </li>
