--- a/marks/templates/marks/base.html
+++ b/marks/templates/marks/base.html
@@ -1,9 +1,12 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title|default:'Система ЭДС'}}</title>
+    <link rel="stylesheet" href="{% static "marks/css/normalize.css" %}">
+    <link rel="stylesheet" href="{% static "marks/css/style.css" %}">
     {% block page_specific_styles %}{% endblock page_specific_styles %}
     {% block extra_head %}{% endblock extra_head %}
 </head>
