--- a/marks/static/marks/css/style.scss
+++ b/marks/static/marks/css/style.scss
@@ -1,11 +1,5 @@
-@use '_fonts';
-
-:root {
-    --base-font-size: 18px;
-
-    --red-color: #FF4259;
-    --blue-color: #39A0FF;
-}
+@use 'vars';
+@use 'fonts';
 
 * {
     font-size: var(--base-font-size);
@@ -15,50 +9,57 @@
 body {
     min-height: 100vh;
     padding: 20px 30px;
+    background-color: var(--bg-color);
 }
 
 a {
     text-decoration: none;
 }
 
-table {
-    border-collapse: collapse;
-
-    th {
-        min-width: 50px;
-    }
-
-    td {
-        padding: 15px 5px;
-        text-align: center;
-    }
-
-    td.fullname {
-        white-space: nowrap;
-        min-width: fit-content;
-        text-align: left;
-    }
+.card {
+    background-color: var(--bg-light-color);
+    border-radius: 30px;
+    display: flex;
 }
 
-table,
-th,
-td {
-    border: 1px solid;
-}
+// table {
+//     border-collapse: collapse;
 
-.mark {
-    font-family: 'Margarine';
-    color: var(--red-color);
-}
+//     th {
+//         min-width: 50px;
+//     }
 
-td {
-    &:hover {
-        .mark_form {
-            display: block;
-        }
-    }
+//     td {
+//         padding: 15px 5px;
+//         text-align: center;
+//     }
 
-    .mark_form {
-        display: none;
-    }
-}
+//     td.fullname {
+//         white-space: nowrap;
+//         min-width: fit-content;
+//         text-align: left;
+//     }
+// }
+
+// table,
+// th,
+// td {
+//     border: 1px solid;
+// }
+
+// .mark {
+//     font-family: 'Margarine';
+//     color: var(--secondary-color);
+// }
+
+// td {
+//     &:hover {
+//         .mark_form {
+//             display: block;
+//         }
+//     }
+
+//     .mark_form {
+//         display: none;
+//     }
+// }
