--- a/marks/static/marks/css/style.scss
+++ b/marks/static/marks/css/style.scss
@@ -8,18 +8,96 @@
 
 body {
     min-height: 100vh;
-    padding: 20px 30px;
+    padding: 40px 60px 0;
     background-color: var(--bg-color);
+}
+
+img,
+svg,
+video {
+    display: block;
+    max-width: 100%;
+}
+
+h1,
+h2 {
+    font-size: var(--m-font-size);
+}
+
+h1,
+h2,
+h3,
+h4 {
+    margin: 0;
+    font-weight: 700;
 }
 
 a {
     text-decoration: none;
 }
 
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+}
+
+input {
+    border: none;
+    outline: none;
+    background-color: var(--bg-color);
+    padding: 15px 20px;
+    border-radius: 10px;
+    width: 100%;
+    box-sizing: border-box;
+
+    &:focus {
+        outline: 2px var(--primary-light-color) solid;
+    }
+}
+
 .card {
     background-color: var(--bg-light-color);
     border-radius: 30px;
     display: flex;
+    flex-direction: column;
+    padding: 30px 30px;
+    box-sizing: border-box;
+}
+
+.card .card-small {
+    border-radius: 10px;
+    padding: 20px 30px;
+}
+
+.button {
+    border-radius: 10px;
+    padding: 15px 20px;
+    background-color: var(--primary-color);
+    font-size: var(--s-font-size);
+    color: var(--bg-light-color);
+    font-weight: bold;
+    transition: .3s ease background-color;
+    cursor: pointer;
+
+    &:hover {
+        background-color: var(--primary-shade-color);
+    }
+}
+
+.flex {
+    display: flex;
+    flex-direction: column;
+}
+
+.errorlist {
+    border-left: 2px var(--secondary-color) solid;
+    padding-left: 10px;
+
+    li {
+        color: var(--text-light-color);
+    }
 }
 
 // table {
