--- a/marks/templates/marks/base_site.html
+++ b/marks/templates/marks/base_site.html
@@ -5,7 +5,7 @@
 <header>
     {% block header %}
     <a href="{% url "marks:index" %}">
-        <img src="{% static "marks/b_logo.svg" %}" alt="Система ЭДС">
+        <img id="logo" src="{% static "marks/b_logo.svg" %}" alt="Система ЭДС">
     </a>
     <div>
         <span>{{request.user.get_full_name}}</span>
