--- a/users/templates/django/forms/div.html
+++ b/users/templates/django/forms/div.html
@@ -1,3 +1,4 @@
+<div class='flex'>
 {{ errors }}
 {% if errors and not fields %}
   <div>{% for field in hidden_fields %}{{ field }}{% endfor %}</div>
@@ -17,8 +18,9 @@
     {% if forloop.last %}
       {% for field in hidden_fields %}{{ field }}{% endfor %}
     {% endif %}
+  </div>
+  {% endfor %}
 </div>
-{% endfor %}
 {% if not fields and not errors %}
   {% for field in hidden_fields %}{{ field }}{% endfor %}
 {% endif %}
