--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,15 +1,51 @@
 {% extends "marks/base_site.html" %}
 {% load static %}
 
-{% block page_specific_styles %}
+{% block page_styles %}
 <link rel="stylesheet" href="{% static "users/css/login.css" %}">
-{% endblock page_specific_styles %}
+{% endblock page_styles %}
+
+{% block header %}
+<img id="logo" src="{% static "marks/b_logo.svg" %}" alt="Система ЭДС">
+{% endblock header %}
 
 {% block content %}
 <form class='card auth' method='post'>
+    <img id="b5" src="{% static "users/imgs/3dmarks/5blue.png" %}" alt="">
+    <img id="b4" src="{% static "users/imgs/3dmarks/4blue.png" %}" alt="">
+    <img id="b51" src="{% static "users/imgs/3dmarks/5+blue.png" %}" alt="">
+    <img id="r51" src="{% static "users/imgs/3dmarks/5+red.png" %}" alt="">
+    <img id="r4" src="{% static "users/imgs/3dmarks/4red.png" %}" alt="">
     <h1>Авторизация</h1>
     {% csrf_token %}
     {{form.as_div}}
-    <input type="submit" value="Войти">
+    <input id='submit' class='button' type="submit" value="Войти">
 </form>
 {% endblock content %}
+
+{% block page_scripts %}
+<script src="{% static "users/js/gsap.min.js" %}"></script>
+<script>
+    tl = gsap.timeline({paused: true, defaults: {ease: 'power1.inOut'}})
+    tl.to('#b5', {width: 154, rotation: -15, left: -184, top: -186}, '<')
+    tl.to('#b4', {width: 171, right: -204, top: -210}, '<')
+    tl.to('#b51', {width: 229, rotation: 0, left: -224, bottom: -150}, '<')
+    tl.to('#r51', {width: 260, rotation: 0, right: -353, bottom: -140}, '<')
+    tl.to('#r4', {width: 162, rotation: 0, left: -386, bottom: 108}, '<')
+
+    idle = gsap.timeline({repeat: -1, yoyo: true, defaults: {duration: 2, ease: 'power1.inOut'}})
+    idle.to('#b5', {rotation: '+=5', y: -10}, '<')
+    idle.to('#b4', {rotation: '-=5', y: 10}, '<')
+    idle.to('#r51', {rotation: '+=5'}, '<')
+
+    submitButton = document.querySelector('#submit')
+
+    submitButton.addEventListener('mouseenter', () => {
+        tl.play()
+        idle.kill()
+    })
+    submitButton.addEventListener('mouseleave', () => {
+        tl.reverse()
+    })
+</script>
+{% endblock page_scripts %}
