--- a/marks/templates/marks/dashboard/base.html
+++ b/marks/templates/marks/dashboard/base.html
@@ -1,2 +1,6 @@
 {% extends "marks/base_site.html" %}
 {% load static %}
+
+{% block page_styles %}
+<link rel="stylesheet" href="{% static "marks/css/dashboard.css" %}">
+{% endblock page_styles %}
