--- a/marks/static/marks/css/style.scss
+++ b/marks/static/marks/css/style.scss
@@ -10,6 +10,11 @@ body {
     min-height: 100vh;
     padding: 40px 60px 0;
     background-color: var(--bg-color);
+    box-sizing: border-box;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 img,
@@ -34,6 +39,8 @@ h4 {
 
 a {
     text-decoration: none;
+    display: block;
+    color: var(--text-color);
 }
 
 ul {
@@ -57,6 +64,20 @@ input {
     }
 }
 
+section {
+    row-gap: 25px;
+}
+
+#top {
+    row-gap: 100px;
+}
+
+.subjects-list {
+    flex-wrap: wrap;
+    column-gap: 25px;
+    row-gap: 25px;
+}
+
 .card {
     background-color: var(--bg-light-color);
     border-radius: 30px;
@@ -66,7 +87,7 @@ input {
     box-sizing: border-box;
 }
 
-.card .card-small {
+.card.card-small {
     border-radius: 10px;
     padding: 20px 30px;
 }
@@ -97,6 +118,21 @@ input {
 
     li {
         color: var(--text-light-color);
+    }
+}
+
+.name {
+    display: flex;
+    align-items: center;
+    column-gap: 15px;
+
+    span {
+        font-weight: 700;
+    }
+
+    img {
+        width: 30px;
+        height: 30px;
     }
 }
 
@@ -141,3 +177,19 @@ input {
 //         display: none;
 //     }
 // }
+
+#top header {
+    display: flex;
+    justify-content: space-between;
+
+    #logo {
+        width: 168px;
+    }
+
+    .profile.card {
+        height: fit-content;
+        padding: 10px 20px;
+        row-gap: 10px;
+        cursor: pointer;
+    }
+}
