--- a/marks/templates/marks/dashboard/student.html
+++ b/marks/templates/marks/dashboard/student.html
@@ -1,29 +1,24 @@
 {% extends "marks/dashboard/base.html" %}
-{% load average_mark %}
+{% load average_mark_inclusion static %}
 
 {% block content %}
-<section>
-    <h2>Твои оценки</h1>
-    <ul>
+<section class="flex">
+    <h1>Твои предметы</h1>
+    <ul class="subjects-list">
         {% for appointment in related_appointments %}
-            <li>
-                <div>
-                    <h3>
-                        <a href="{% url "marks:show" appointment.students_unit_id appointment.subject_id %}">{{appointment.subject}}</a>
-                    </h3>
-                    {% if appointment.subject.description %}
-                        <p>{{appointment.subject.description}}</p>
-                    {% endif %}
-                    <div>
-                        <span>преподаватель: </span>
-                        <span>{{appointment.teacher}}</span>
-                    </div>
-                    <div>
-                        <span>средний балл: </span>
-                        <span class="mark">{% average_mark appointment.subject %}</span>
-                    </div>
+        <li>
+            <a class="card student flex" href="{% url "marks:show" appointment.students_unit_id appointment.subject_id %}">
+                <h3>{{appointment.subject}}</h3>
+                {% if appointment.subject.description %}
+                <p>{{appointment.subject.description}}</p>
+                {% endif %}
+                <div class="name">
+                    <img src="{% static "users/imgs/default_user.png" %}" alt="">
+                    <span>{{appointment.teacher}}</span>
                 </div>
-            </li>
+                {% average_mark_inclusion appointment.subject %}
+            </a>
+        </li>
         {% endfor %}
     </ul>
 </section>
