--- a/users/static/users/css/login.css
+++ b/users/static/users/css/login.css
@@ -1,11 +1,9 @@
 body {
-  box-sizing: border-box;
   max-height: 100vh;
-  overflow: hidden;
 }
 
 #logo {
-  width: 327px;
+  width: 327px !important;
 }
 
 .auth {
