--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -11,11 +11,11 @@
 
 {% block content %}
 <form class='card auth' method='post'>
-    <img id="b5" src="{% static "users/imgs/3dmarks/5blue.png" %}" alt="">
-    <img id="b4" src="{% static "users/imgs/3dmarks/4blue.png" %}" alt="">
-    <img id="b51" src="{% static "users/imgs/3dmarks/5+blue.png" %}" alt="">
-    <img id="r51" src="{% static "users/imgs/3dmarks/5+red.png" %}" alt="">
-    <img id="r4" src="{% static "users/imgs/3dmarks/4red.png" %}" alt="">
+    <img id="b5" src="{% static "marks/imgs/3dmarks/5blue.png" %}" alt="">
+    <img id="b4" src="{% static "marks/imgs/3dmarks/4blue.png" %}" alt="">
+    <img id="b51" src="{% static "marks/imgs/3dmarks/5+blue.png" %}" alt="">
+    <img id="r51" src="{% static "marks/imgs/3dmarks/5+red.png" %}" alt="">
+    <img id="r4" src="{% static "marks/imgs/3dmarks/4red.png" %}" alt="">
     <h1>Авторизация</h1>
     {% csrf_token %}
     {{form.as_div}}
