--- a/marks/templates/marks/dashboard/student.html
+++ b/marks/templates/marks/dashboard/student.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <section class="flex">
-    <h1>Твои предметы</h1>
+    <h1>Твои оценки</h1>
     <ul class="subjects-list">
         {% for appointment in related_appointments %}
         <li>
