--- a/marks/static/marks/css/_vars.scss
+++ b/marks/static/marks/css/_vars.scss
@@ -8,7 +8,7 @@
     --text-color: #000000;
     --text-light-color: #545454;
     --text-ultralight-color: #B0B0B0;
-    --bg-color: #F4F9FF;
+    --bg-color: #EEF6FF;
     --bg-light-color: #FFFFFF;
 
     --xs-font-size: 14px;
