--- a/marks/static/marks/css/dashboard.css
+++ b/marks/static/marks/css/dashboard.css
@@ -1,13 +1,24 @@
-.subjects-list .student {
-  min-width: 300px;
-  row-gap: 10px;
+.subjects-list .card {
   position: relative;
   transition: 0.3s ease;
   outline: var(--bg-light-color) 2px solid;
+  row-gap: 10px;
+  min-width: 300px;
 }
-.subjects-list .student h3 {
+.subjects-list .card h3 {
   font-size: var(--s-font-size);
   color: var(--text-color);
+}
+.subjects-list .card .mark,
+.subjects-list .card .marks-warning {
+  color: var(--secondary-color);
+  font-size: var(--s-font-size);
+}
+.subjects-list .card .mark {
+  font-family: "Margarine";
+}
+.subjects-list .card:hover {
+  outline: var(--primary-light-color) 2px solid;
 }
 .subjects-list .student .name {
   column-gap: 10px;
@@ -20,17 +31,6 @@
   position: absolute;
   right: 5px;
   top: -15.5px;
-}
-.subjects-list .student .mark,
-.subjects-list .student .marks-warning {
-  color: var(--secondary-color);
-  font-size: var(--s-font-size);
-}
-.subjects-list .student .mark {
-  font-family: "Margarine";
-}
-.subjects-list .student:hover {
-  outline: var(--primary-light-color) 2px solid;
 }
 
 /*# sourceMappingURL=dashboard.css.map */
