--- a/marks/static/marks/css/style.css
+++ b/marks/static/marks/css/style.css
@@ -8,7 +8,7 @@
   --text-color: #000000;
   --text-light-color: #545454;
   --text-ultralight-color: #B0B0B0;
-  --bg-color: #F4F9FF;
+  --bg-color: #EEF6FF;
   --bg-light-color: #FFFFFF;
   --xs-font-size: 14px;
   --base-font-size: 16px;
@@ -46,7 +46,6 @@ body {
   padding: 40px 60px 0;
   background-color: var(--bg-color);
   box-sizing: border-box;
-  overflow: hidden;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
