--- a/marks/static/marks/css/_vars.scss
+++ b/marks/static/marks/css/_vars.scss
@@ -10,6 +10,10 @@
     --text-ultralight-color: #B0B0B0;
     --bg-color: #EEF6FF;
     --bg-light-color: #FFFFFF;
+    --5-color: #53c93b;
+    --4-color: #39c58b;
+    --3-color: #3bafcc;
+    --2-color: var(--secondary-color);
 
     --xs-font-size: 14px;
     --base-font-size: 16px;
