--- a/marks/templates/marks/templatetags/marks_table.html
+++ b/marks/templates/marks/templatetags/marks_table.html
@@ -1,42 +1,64 @@
-{% load average_mark date_in %}
-<table>
-    <thead>
-        <tr>
-            {% if not is_student|default:False %}<th>ФИО</th>{% endif %}
-            <th>Ср. балл</th>
-            {% for date in dates %}
-                <th>{{date|date:"d.m"}}</th>
-            {% endfor %}
-        </tr>
-    </thead>
-    <tbody>
-        {% for student, marks in marks_map.items %}
+{% load static average_mark date_in %}
+
+{% block page_styles %}
+<link rel="stylesheet" href="{% static "marks/css/marks_table.css" %}">
+{% endblock page_styles %}
+
+<div class="table-container">
+    <table>
+        <thead>
             <tr>
-                {% if not is_student|default:False %}<td class="fullname">{{student}}</td>{% endif %}
-                <td><span class="mark">{% average_mark subject student %}</span></td>
+                <th>№</th>
+                {% if not is_student|default:False %}<th>ФИО</th>{% endif %}
+                <th>Ср. балл</th>
                 {% for date in dates %}
-                    <td>
-                        {% date_in marks date as flag %}
-                        {% for mark in marks %}
-                            {% if date == mark.pub_date %}
-                                <span class="mark">{{mark.value}}</span>
-                            {% endif %}
-                        {% endfor %}
-                        {% if not flag and not is_student|default:False %}
-                            <form class="mark_form" method="post" action="{% url "marks:addmark" students_unit.id subject.id %}">
-                                {% csrf_token %}
-                                <input type="hidden" name="student" value="{{student.id}}">
-                                <input type="hidden" name="teacher" value="{{request.user.id}}">
-                                <input type="hidden" name="subject" value="{{subject.id}}">
-                                <input type="date" style="display: none" name="pub_date" value="{{date|date:"Y-m-d"}}">
-                                {% for idx in '2345'|make_list %}
-                                    <label for="{{idx}}">{{idx}}<input onClick="this.form.submit()" id="{{idx}}" type="radio" name="value" value="{{idx}}"></label>
-                                {% endfor %}
-                            </form>
-                        {% endif %}
-                    </td>
+                    <th>{{date|date:"d.m"}}</th>
                 {% endfor %}
             </tr>
-        {% endfor %}
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            {% for student, marks in marks_map.items %}
+                <tr>
+                    <td>{{forloop.counter}}</td>
+                    {% if not is_student|default:False %}<td class="fullname">{{student.get_fio}}</td>{% endif %}
+                    <td>{% average_mark subject student %}</td>
+                    {% for date in dates %}
+                        <td>
+                            {% date_in marks date as flag %}
+                            {% for mark in marks %}
+                                {% if date == mark.pub_date %}
+                                    <span class="mark" style="color: var(--{{mark.value}}-color);">{{mark.value}}</span>
+                                {% endif %}
+                            {% endfor %}
+                            {% if not flag and not is_student|default:False %}
+                                <form class="mark_form" method="post" action="{% url "marks:addmark" students_unit.id subject.id %}">
+                                    {% csrf_token %}
+                                    <input type="hidden" name="student" value="{{student.id}}">
+                                    <input type="hidden" name="teacher" value="{{request.user.id}}">
+                                    <input type="hidden" name="subject" value="{{subject.id}}">
+                                    <input type="date" style="display: none" name="pub_date" value="{{date|date:"Y-m-d"}}">
+                                    {% for idx in '2345'|make_list %}
+                                        <label for="{{idx}}">{{idx}}<input onClick="this.form.submit()" id="{{idx}}" type="radio" name="value" value="{{idx}}"></label>
+                                    {% endfor %}
+                                </form>
+                            {% endif %}
+                        </td>
+                    {% endfor %}
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+
+{% block page_scripts %}
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const tableContainer = document.querySelector('.table-container');
+        const thead = document.querySelector('thead');
+    
+        tableContainer.addEventListener('scroll', function() {
+            thead.style.top = tableContainer.scrollTop - 10 + 'px';
+        });
+    });
+    </script>
+{% endblock page_scripts %}
